--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 											<h3>Technical Skills</h3>
 											<ul>
 												<li>SQL</li>
+												<li>MS Excel Advanced</li>
 												<li>Microsoft Dynamics CRM</li>
 												<li>Salesforce Admin</li>
 												<li>Tableau</li>
@@ -82,7 +83,7 @@
 										</div>
 										<div class="col-6 col-12-small">
 
-											<h3></br> </h3>
+											
 											<ul>
 												<li>Pivot Tables</li>
 												<li>VLookup</li>
@@ -97,7 +98,7 @@
 									<header>
 										<h2>Work Experience</h2>
 									<header>
-										<h3>Data Analyst</h3>
+										<h3>Data Management Assistant</h3>
 										<p>TMF Group
 										</br>04/2022 - Present</p>
 									</header>
