--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 												<header>
 													<h3>MCA (Software Engineering)</h3>
 														<p>08/2017 - 08/2020
-														<h4>Guru Gobind Singh Indraprastha University</h4></p>
+														<h4>Guru Gobind Singh Indraprastha University, New Delhi</h4></p>
 												</header>		
 													<p>Projects:- 					
 														</br>1) Attendance Management System (Android)
